--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
-        <h1 class="title">Abhijith.Tp</h1>
+        <h1 class="title">Farsan ks</h1>
         <p class="section__text__p2">Fullstack Developer</p>
         <div class="btn-container">
           <button
@@ -60,13 +60,13 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https:www.linkedin.com/in/abhijith-tp-812b1327a'"
+            onclick="location.href='https:www.linkedin.com/in/farsanks'"
           />
           <img
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https:github.com/AbhijithtpGit'"/>
+            onclick="location.href='https:github.com/Farsanks'"/>
         </div>
       </div>
     </section>
@@ -84,7 +84,7 @@
                 
               />
               <h3>personal Detials</h3>
-              <p> Age. :22.<br />Gender: Male. <br/> Place:Sulthan bathery, wayanad ,kerala</p>
+              <p> Age. :21.<br />Gender: Male. <br/> Place:Padinharathara, wayanad ,kerala</p>
             </div>
             <div class="details-container">
               <img
@@ -93,13 +93,13 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>Bachelor of Computer Application.<br />Current GPA: 7.5/ 10.</p>
-              <p>Nilgiri College of Arts and Science (Autonomous) College in Thaloor, bharathiar unvivacity</p>
+              <p>Master of Computer Application.<br />Current GPA: 8.3/ 10.</p>
+              <p>Ilahia College of Engineering and Technology,Muvattupuzha,Ernakulam</p>
             </div>
           </div>
           <div class="text-container">
             <p>
-                I am a fresher BCA graduate with solid soft skills strong communication abilities. I am looking for an opportunity to
+                I am a fresher MCA student with solid soft skills strong communication abilities. I am looking for an opportunity to
                 start my career in web development and gain valuable experience in the field. I havea positive attitude and I am eager
                 to learn new skills and technologies in order to become a successful developer.l
             </p>
@@ -309,7 +309,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https:github.com/AbhijithtpGit/Routing-Project.git'"
+                onclick="location.href='https:github.com/Farsanks/Web_Application.git'"
               >
                 Github
               </button>
@@ -333,13 +333,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https:github.com/AbhijithtpGit/Login-form-using-Express-js.git'"
+                onclick="location.href='https:github.com/Farsanks/Login_form_using_Expressjs.git'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https:abhijithtpgit.github.io/nodejsform/'"
+                onclick="location.href='https:farsanks.github.io/Nodejs_form/'"
               >
                 Live Demo
               </button>
@@ -357,7 +357,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https:github.com/AbhijithtpGit'"
+                onclick="location.href='https:github.com/Farsanks'"
               >
                 Github
               </button>
@@ -388,7 +388,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="abhijithtp83@gmail.com">abhijithtp83@gmail.com</a></p>
+          <p><a href="farsankadavandy@gmail.com">farsankadavandy@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -396,7 +396,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https:www.linkedin.com/in/abhijith-tp-812b1327a">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/farsanks">LinkedIn</a></p>
         </div>
       </div>
     </section>
