--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https:www.linkedin.com/in/farsanks'"
+            onclick="location.href='https://www.linkedin.com/in/farsanks'"
           />
           <img
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https:github.com/Farsanks'"/>
+            onclick="location.href='https://github.com/Farsanks'"/>
         </div>
       </div>
     </section>
