--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https:github.com/Farsanks/Web_Application.git'"
+                onclick="location.href='https://github.com/Farsanks/Web_Application.git'"
               >
                 Github
               </button>
@@ -333,13 +333,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https:github.com/Farsanks/Login_form_using_Expressjs.git'"
+                onclick="location.href='https://github.com/Farsanks/Login_form_using_Expressjs.git'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https:farsanks.github.io/Nodejs_form/'"
+                onclick="location.href='https://farsanks.github.io/Nodejs_form/'"
               >
                 Live Demo
               </button>
@@ -357,7 +357,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https:github.com/Farsanks'"
+                onclick="location.href='https://github.com/Farsanks'"
               >
                 Github
               </button>
